--- a/EscalArt/templates/escalArt/datosCliente.html
+++ b/EscalArt/templates/escalArt/datosCliente.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Datos cliente</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/datosCliente.css' %}">
@@ -37,7 +37,7 @@
 
                 {% if perfil.img_header %}
 
-                <img src="/{{perfil.img_header}}" alt=""> {%else%}
+                <img class="perfil-usuario-portada_2" src="/{{perfil.img_header}}" alt=""> {%else%}
 
                 <img class="perfil-usuario-portada_2" src="{% static 'EscalArt/img/banner.jpg' %}" alt=""> {%endif%}
                 <div class="perfil-usuario-avatar">
