--- a/EscalArt/templates/escalArt/index.html
+++ b/EscalArt/templates/escalArt/index.html
@@ -85,7 +85,7 @@
                 </P>
                 <div>
                     {% if user.is_authenticated %}
-                    <form class="post-likes column" method="post" action="{% url 'like' p.idPublicacion %}">
+                    <form class="post-likes column" method="post" action="{% url 'LikePublicacion' p.idPublicacion %}">
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{request.path}}">
                         <button type="submit" style="background-color:transparent; border:none;box-shadow:none;"><span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span></button>
