--- a/EscalArt/static/escalArt/css/configuracion.css
+++ b/EscalArt/static/escalArt/css/configuracion.css
@@ -1,10 +1,9 @@
-.configuracion {
+.Config-Detalles {
     display: grid;
     grid-template-columns: 0.2fr 1fr;
     justify-content: center;
     width: 100%;
-    margin: 30px 0px;
-    padding: 0 18%;
+    padding: 30px 18%;
 }
 
 
@@ -62,7 +61,7 @@
 
 .config-right {
     background-color: #12130F;
-    z-index: 0;
+    z-index: 1;
 }
 
 
@@ -157,6 +156,7 @@
     padding: 10px 30px;
     color: #fff;
     margin: 15px 0 0 0;
+    z-index: auto;
 }
 
 .btn-form::after {
