--- a/EscalArt/static/escalArt/css/Perfil.css
+++ b/EscalArt/static/escalArt/css/Perfil.css
@@ -242,75 +242,6 @@ body {
     vertical-align: middle;
 }
 
-
-/* 
-.btn-Crear-Publicacion {
-    position: relative;
-    padding: 10px 15px;
-    border: none;
-    outline: none;
-    background: #56C92C;
-    color: #282928;
-    cursor: pointer;
-    transition: .5s;
-    overflow: hidden;
-    border-radius: 5px;
-}
-
-.btn-Crear-Publicacion:hover {
-    color: rgb(255, 255, 255);
-}
-
-.btn-Crear-Publicacion span {
-    position: absolute;
-    background: #141204;
-    transition: .5s;
-}
-
-.btn-Crear-Publicacion span:nth-child(1) {
-    width: 100%;
-    height: 1.5px;
-    top: 0;
-    left: -100%;
-}
-
-.btn-Crear-Publicacion span:nth-child(2) {
-    width: 100%;
-    height: 1.5px;
-    bottom: 0;
-    right: -100%;
-}
-
-.btn-Crear-Publicacion span:nth-child(3) {
-    width: 1.5px;
-    height: 100%;
-    bottom: -100%;
-    left: 0;
-}
-
-.btn-Crear-Publicacion span:nth-child(4) {
-    width: 1.5px;
-    height: 100%;
-    top: -100%;
-    right: 0;
-}
-
-.btn-Crear-Publicacion:hover span:nth-child(1) {
-    left: 0;
-}
-
-.btn-Crear-Publicacion:hover span:nth-child(2) {
-    right: 0;
-}
-
-.btn-Crear-Publicacion:hover span:nth-child(3) {
-    bottom: 0;
-}
-
-.btn-Crear-Publicacion:hover span:nth-child(4) {
-    top: 0;
-} */
-
 .btn-Crear-Publicacion {
     top: 0;
     left: 0;
@@ -463,7 +394,7 @@ body {
 .publicacion-fondo {
     border-radius: 15px;
     background-color: #fff;
-    height: 80%;
+    height: 70%;
     width: 35%;
     position: fixed;
     z-index: 10;
@@ -499,6 +430,10 @@ body {
     padding: 3px 7px;
 }
 
+.publicacion-centro {
+    height: 20vh;
+}
+
 .publicacion-centro img {
     width: 130px;
     height: 130px;
@@ -525,6 +460,21 @@ body {
     border-radius: 10px;
 }
 
+.publicacion-centro .form-group {
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    position: absolute;
+    width: 100%;
+    left: 25%;
+    margin-top: 50px;
+    top: 35px;
+}
+
+.publicacion-centro .form-group input {
+    text-align: center;
+}
+
 .publicacion-centro i {
     color: #86C332;
     margin: 10px 5px 0 0;
@@ -536,7 +486,7 @@ body {
 
 .publicacion-bottom button img {
     width: 100%;
-    height: auto;
+    height: 350px;
     padding: 20px 40px;
     border-radius: 20px;
 }
@@ -544,6 +494,11 @@ body {
 .publicacion-bottom {
     border-radius: 20px;
 }
+
+
+/* .publicacion-bottom .img-crear-publicacion_ {
+    padding-top: 110px;
+} */
 
 .publicacion-bottom input {
     width: 100px;
@@ -560,11 +515,15 @@ body {
 .publicacion-bottom_2 {
     text-align: center;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 30%;
     margin-bottom: 15px;
     align-items: center;
+    position: absolute;
+    /* top: 0; */
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    padding: 20px 0;
 }
 
 .publicacion-bottom_2 input {
@@ -576,7 +535,7 @@ body {
     border-radius: 10px;
     color: #fff;
     cursor: pointer;
-    margin: 0 15px;
+    margin: 0 25px;
 }
 
 @media (max-width:800px) {
