--- a/EscalArt/templates/escalArt/Perfil_Artista.html
+++ b/EscalArt/templates/escalArt/Perfil_Artista.html
@@ -488,26 +488,26 @@
     
     #emoji-post {
         position: absolute;
-        margin-left: 12%;
-        top: 100px;
+        margin-left: 18%;
+        top: 180px;
     }
     
     #titulo-post {
         position: flex;
         top: 40px;
         left: 25%;
+        text-align: center;
     }
     
     #descripcion-post {
         position: flex;
         resize: none;
         height: 6em;
-        top: 60px;
-        left: 20%;
+        top: 100px;
+        left: 25%;
     }
     
     #imagen-post {
-        margin-top: 0;
         margin-bottom: 0;
     }
     
