--- a/EscalArt/templates/escalArt/index.html
+++ b/EscalArt/templates/escalArt/index.html
@@ -255,7 +255,7 @@
             </div>
         </div>
         <figure class="about__img">
-            <img src="./img/tags.gif" class="about__picture ">
+            <img src="{% static 'EscalArt/img/perfil_artista.gif' %}" class="about__picture ">
         </figure>
         <figure class="about__img about__img--left ">
             <img src="{% static 'EscalArt/img/tags.gif' %}" class="about__picture ">
